Fix a crash during the build with introspection enabled

Using GI_SCANNER_DEBUG=save-temps, the temporal files remained.
It has been suggested that calling gtk_style_context_add_provider_for_screen()
should, inside a g_once_init(), be in the class's _init() (not class_init()) hook.

https://bugzilla.gnome.org/show_bug.cgi?id=726812